# slopscore

./: .coverage 2  .coverage 3  .coverage 4  .coverage 5  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  DATA_SOURCES.md  LICENSE  MODEL_CARD.md  PROFILE_NOTES.md  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: baseline.md  benchmark.md  code-and-fairness.md  configuration.md  index.md  limitations.md  suppression.md
eval/: RESULTS.md  RUBRIC.md  results.json
eval/datasets/: benchmark.jsonl  seed.jsonl
eval/results/: realcorpus.json
scripts/eval/: _common.py  build_benchmark.py  build_seed.py  experiment.py  fetch.py  report.py  train.py
src/slopscore/: __init__.py  cli.py  config.py  config_file.py  core.py  document.py  models.py  spans.py  suppress.py
src/slopscore/data/lexicons/: markers.yaml
src/slopscore/data/model/: slopscore-v0.3.json  slopscore-v0.5.json
src/slopscore/data/patterns/: formulaic.yaml  prompt_residue.yaml
src/slopscore/data/patterns/attribution/: overattribution.yaml  weasel.yaml
src/slopscore/data/patterns/claims/: unsupported_universal.yaml
src/slopscore/data/patterns/copula/: copula.yaml
src/slopscore/data/patterns/parallelism/: parallelism.yaml
src/slopscore/data/patterns/significance/: legacy.yaml
src/slopscore/data/patterns/suggestions/: replacements.yaml
src/slopscore/detectors/: __init__.py  base.py
src/slopscore/eval/: __init__.py  datasets.py  fairness.py  harness.py  metrics.py  selective.py  span_metrics.py
src/slopscore/features/: __init__.py  _nlp.py  _ruleset.py  base.py  cadence.py  formatting.py  formulaic_patterns.py  human_signals.py  lexical_markers.py  phrase_packs.py  prompt_residue.py  redundancy.py  specificity.py  suggestions.py  syntactic_tells.py
src/slopscore/ingest/: __init__.py  batch.py  code.py  json_source.py  markdown.py  text.py  website.py
src/slopscore/normalize/: __init__.py  clean.py  language.py  offsets.py  segment.py
src/slopscore/report/: __init__.py  baseline.py  batch.py  console.py  html.py  json_report.py  locations.py  markdown.py  sarif.py
src/slopscore/scoring/: __init__.py  calibrate.py  confidence.py  model.py  profiles.py  scorer.py  weights.py
tests/: conftest.py  test_baseline.py  test_calibrate.py  test_cli.py  test_config.py  test_conservatism.py  test_detectors.py  test_eval.py  test_eval_benchmark.py  test_fairness_cmd.py  test_features.py  test_formatting_emdash.py  test_formulaic_rhetorical.py  test_human_and_formatting.py  test_ingest_code.py  test_ingest_markdown.py  test_ingest_other.py  test_leakage.py  test_locations.py  test_model.py  test_normalize_offsets.py  test_parallelism_slogan.py  test_phrase_packs.py  test_redundancy_nlp.py  test_reports_v021.py  test_scorer.py  test_specificity_nlp.py  test_suggestions.py  test_suppress.py  test_suppress_markdown.py  test_syntactic_tells.py  test_unsupported_claims.py
