[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slopscore"
version = "0.3.1"
description = "Transparent AI-slop writing-pattern analysis for essays, blog posts, Markdown, JSON, and websites."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "John Hodge", email = "jhodge007@gmail.com" }]
keywords = ["nlp", "ai-slop", "linter", "writing", "text-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "regex>=2024.5",
    "marko>=2.1",
    "pysbd>=0.3.4",
    "ftfy>=6.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6",
]

[project.optional-dependencies]
# Web article extraction. Pulls native lxml, so kept out of the lean default.
web = ["trafilatura>=2.0", "httpx>=0.27"]
# Heavier NLP: spaCy NER/POS and sentence-transformer embeddings.
nlp = ["spacy>=3.7", "sentence-transformers>=3.0"]
# Optional language detection (used to lower confidence on non-English text).
lang = ["lingua-language-detector>=2.0"]
# HTML report rendering (Jinja2 autoescaping).
report = ["jinja2>=3.1"]
# Fetching the large public evaluation corpora (scripts/eval/fetch.py).
eval = ["datasets>=2.19", "huggingface-hub>=0.23"]
# Experimental gradient-boosted scorer (research only; never shipped at scan time).
ml = ["lightgbm>=4.0"]
# Placeholder for v0.4 authorship-signal detector adapters.
detectors = []
all = [
    "slopscore[web,nlp,lang,report]",
]

[project.scripts]
slopscore = "slopscore.cli:app"

[project.urls]
Homepage = "https://github.com/jman4162/slopscore"
Issues = "https://github.com/jman4162/slopscore/issues"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/slopscore"]

[tool.hatch.build.targets.wheel.force-include]
"src/slopscore/data" = "slopscore/data"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "B", "C4", "UP", "RUF"]
ignore = ["N818"]  # allow non-"Error"-suffixed exception names

[tool.ruff.lint.per-file-ignores]
# typer.Option/Argument in defaults is the idiomatic CLI pattern, not a bug.
"src/slopscore/cli.py" = ["B008"]
# This module's whole job is matching em dashes and curly quotes literally.
"src/slopscore/features/formatting.py" = ["RUF001", "RUF003"]
# Uses the sigma glyph intentionally for z-score deviation output.
"src/slopscore/report/console.py" = ["RUF001"]
# Inline HTML template: long lines and severity glyphs are intentional.
"src/slopscore/report/html.py" = ["E501", "RUF001"]
# Hand-authored text corpus: long example lines are intentional.
"scripts/eval/build_seed.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["slopscore"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "pysbd.*",
    "ftfy.*",
    "marko.*",
    "jsonpath_ng.*",
    "trafilatura.*",
    "lingua.*",
    "sklearn.*",
    "regex.*",
    "spacy.*",
    "spacy",
    "jinja2",
    "jinja2.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy's bundled stubs use PEP 695 `type` aliases that mypy rejects under python_version 3.11.
module = ["numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers -ra --cov=slopscore --cov-report=term-missing"
